--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-framework = arduino
-board = uno
+;[env:uno]
+;framework = arduino
+;board = uno
+;platform = atmelavr
+;targets = upload
+
+[env:ATmega1284P]
+board = ATmega1284P
 platform = atmelavr
+framework = arduino
 targets = upload
